--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
   <h1>Feco's website...</h1>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, adipisci. Excepturi magni incidunt, quaerat quisquam amet tenetur aspernatur cum corporis officiis repudiandae dicta id sequi, voluptatibus laborum eaque magnam sapiente.</p>
 </body>
 </html>
