--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello Internet!</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
 </head>
 <body>
-  <h1>Feco's website...</h1>
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, adipisci. Excepturi magni incidunt, quaerat quisquam amet tenetur aspernatur cum corporis officiis repudiandae dicta id sequi, voluptatibus laborum eaque magnam sapiente.</p>
+	<h1>Feco's website...</h1>
 </body>
 </html>
